#cms-958 fixed alignment

--- a/public/umi-admin/styles/umi/components/_toolbar.scss
+++ b/public/umi-admin/styles/umi/components/_toolbar.scss
@@ -19,4 +19,12 @@
         padding-top: $button-med + rem-calc(1);
         padding-bottom: $button-med + rem-calc(1);
     }
+    .f-dropdown.content{
+        .button {
+            padding: 0.4rem;
+        }
+        table td {
+            line-height: 1.6rem;
+        }
+    }
 }
